# Board-Games

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  coverage.sh  run.bat  run.sh  test.bat  test.sh  tests.bat
coverage/: relatorio.Board.cpp.4caf48733230ca8d46fdee04211a6cc4.html  relatorio.BoardGame.cpp.ec1ecd951f04786568dfabb420d7fcab.html  relatorio.BoardGameTests.cpp.fc1c161e726502802c014b54f4afaf4a.html  relatorio.BoardTests.cpp.c43d96727621164e696df45986a77cdc.html  relatorio.ConnectFour.cpp.66d5565111ec9bd1e5897b9c2d320af1.html  relatorio.ConnectFourTests.cpp.b9f529fec4c9feb59ac6aaa10070256c.html  relatorio.Manager.cpp.60929682afbe197651d56fd79ca9de21.html  relatorio.ManagerTests.cpp.c38a098c88b2f5d0334bfcefdc017640.html  relatorio.Player.cpp.faf64549d6b7017e0027051ccb9623e5.html  relatorio.PlayerTests.cpp.bc40257fb522204033e745b2ed04763b.html  relatorio.Reversi.cpp.7a5a8ddf624e32b7aa90be893901534a.html  relatorio.ReversiTests.cpp.7ae1de571e70e8ee9146bb8349eefe6f.html  relatorio.TicTacToe.cpp.fc66d948df82b64c7e3997f22d7e948d.html  relatorio.TicTacToeTests.cpp.40a19b0681e2e58a2d43c50f3df4c729.html  relatorio.Utils.cpp.055ff8db56dabcf68ecd8382ba79cbed.html  relatorio.UtilsTests.cpp.afdd4adecd46d636c23b6bcfbdaf5656.html  relatorio.doctest.h.a7a1a7f535dff6109b1bd3fe90efd451.html  relatorio.exceptions.cpp.b5782990b6283ed671145423ab00fd01.html  relatorio.exceptionsTests.cpp.0c06455ea99d72b4375ac81d106b165a.html  relatorio.functions.html  relatorio.html  relatorio.main.cpp.7ec3c68a81efff79b6ca22ac1f1eabba.html
include/: Board.hpp  BoardGame.hpp  ConnectFour.hpp  LigFour.hpp  Manager.hpp  Player.hpp  Reversi.hpp  TicTacToe.hpp  Utils.hpp  exceptions.hpp
src/: Board.cpp  BoardGame.cpp  ConnectFour.cpp  LigFour.cpp  Manager.cpp  Player.cpp  Reversi.cpp  TicTacToe.cpp  Utils.cpp  exceptions.cpp  main.cpp
(+516 files in other folders)
